<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#009900"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context="com.gtatiya.flashvocab.Main2Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="3dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="#87CEFA"
            android:text="@string/Word"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvWord"
            android:fontFamily="Tahoma"
            android:textColor="#000000"
            android:text="@string/dots"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="3dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="#87CEFA"
            android:text="@string/POS"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvPOS"
            android:fontFamily="Tahoma"
            android:textColor="#000000"
            android:text="@string/dots"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="3dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="#87CEFA"
            android:text="@string/Meaning"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvMeaning"
            android:fontFamily="Tahoma"
            android:textColor="#000000"
            android:text="@string/dots"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="3dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="#87CEFA"
            android:text="@string/Example"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvExample"
            android:fontFamily="Tahoma"
            android:textColor="#000000"
            android:text="@string/dots"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="3dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="185dp"
            android:contentDescription="@null"
            android:id="@+id/ivPic"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="3dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="#87CEFA"
            android:text="@string/Synonym"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvSynonym"
            android:fontFamily="Tahoma"
            android:textColor="#000000"
            android:text="@string/dots"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="3dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="#87CEFA"
            android:text="@string/Antonym"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvAntonym"
            android:fontFamily="Tahoma"
            android:textColor="#000000"
            android:text="@string/dots"/>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="5dp"
        android:layout_margin="10dp"
        android:background="#005266"
        android:gravity="center"
        android:text="@string/NextCard"
        android:id="@+id/bNextCard"/>

</LinearLayout>
