<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:background="@drawable/blue_gradient"
    tools:context="com.gtatiya.flashvocab.Settings">

    <LinearLayout
        android:id="@+id/child_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="Tahoma"
            android:textColor="#000000"
            android:text="@string/NoOfNewCardsDayWordCard"/>

        <EditText
            android:id="@+id/etNoNewCards_WordCard"
            android:labelFor="@+id/etNoNewCards_WordCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:inputType="number"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/child_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="Tahoma"
            android:textColor="#000000"
            android:text="@string/NoOfReviewCardsDayWordCard"/>

        <EditText
            android:id="@+id/etNoReviewCards_WordCard"
            android:labelFor="@+id/etNoReviewCards_WordCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:inputType="number"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/child_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="Tahoma"
            android:textColor="#000000"
            android:text="@string/NoOfNewCardsDayMCQCard"/>

        <EditText
            android:id="@+id/etNoNewCards_MCQCard"
            android:labelFor="@+id/etNoNewCards_MCQCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:inputType="number"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/child_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="Tahoma"
            android:textColor="#000000"
            android:text="@string/NoOfReviewCardsDayMCQCard"/>

        <EditText
            android:id="@+id/etNoReviewCards_MCQCard"
            android:labelFor="@+id/etNoReviewCards_MCQCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:inputType="number"/>

    </LinearLayout>

    <Button
        android:id="@+id/bSubmit"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:gravity="center"
        android:textColor="#000000"
        android:text="@string/Submit" />

</LinearLayout>
