<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#Ff9e00"
    tools:ignore="Overdraw"
    tools:context="com.gtatiya.flashvocab.MCQCard">

    <ViewFlipper
        android:id="@+id/view_flipper"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <RelativeLayout
            android:id="@+id/child_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="50dp">

                    <LinearLayout
                        android:id="@+id/child_1_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="3sp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:textColor="#87CEFA"
                            android:text="@string/Meaning"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/tvMeaning"
                            android:fontFamily="Tahoma"
                            android:textColor="#000000"
                            android:textSize="23sp"
                            android:text="@string/dots"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/child_1_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="3sp"
                        android:orientation="horizontal"
                        android:layout_below="@+id/child_1_1">


                        <ImageView
                            android:id="@+id/imgView"
                            android:layout_width="150sp"
                            android:layout_height="150sp"
                            android:scaleType="centerInside"
                            android:contentDescription="@null"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/child_1_4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="3sp"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_below="@+id/child_1_2">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:textColor="#87CEFA"
                            android:text="@string/SelectCorrectWord"/>

                        <RadioGroup
                            android:id="@+id/rgOptions"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:gravity="center">

                            <RadioButton
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/option1"
                                android:textSize="23sp"
                                android:text="@string/dots"/>
                            <RadioButton
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/option2"
                                android:textSize="23sp"
                                android:text="@string/dots"/>
                            <RadioButton
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/option3"
                                android:textSize="23sp"
                                android:text="@string/dots"/>
                            <RadioButton
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/option4"
                                android:textSize="23sp"
                                android:text="@string/dots"/>

                        </RadioGroup>


                    </LinearLayout>
                </RelativeLayout>

            </ScrollView>

            <Button
                android:id="@+id/bShowAns"
                android:layout_width="match_parent"
                android:layout_height="55sp"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:textColor="#000000"
                android:text="@string/ShowAnswer"/>

        </RelativeLayout>



        <RelativeLayout
            android:id="@+id/child_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ScrollView
                android:id="@+id/scrollView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="50dp">

                    <LinearLayout
                        android:id="@+id/child_2_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="3sp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:textColor="#87CEFA"
                            android:text="@string/Meaning"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/tvMeaning2"
                            android:fontFamily="Tahoma"
                            android:textColor="#000000"
                            android:textSize="23sp"
                            android:text="@string/dots"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/child_2_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="3sp"
                        android:orientation="horizontal"
                        android:layout_below="@+id/child_2_1">


                        <ImageView
                            android:id="@+id/imgView2"
                            android:layout_width="150sp"
                            android:layout_height="150sp"
                            android:scaleType="centerInside"
                            android:contentDescription="@null"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/child_2_4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="3sp"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_below="@+id/child_2_2">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:textColor="#87CEFA"
                            android:text="@string/SelectCorrectWord"/>

                        <RadioGroup
                            android:id="@+id/rgOptions2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal">

                            <RadioButton
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/option1_2"
                                android:textSize="23sp"
                                android:text="@string/dots"/>
                            <RadioButton
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/option2_2"
                                android:textSize="23sp"
                                android:text="@string/dots"/>
                            <RadioButton
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/option3_2"
                                android:textSize="23sp"
                                android:text="@string/dots"/>
                            <RadioButton
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/option4_2"
                                android:textSize="23sp"
                                android:text="@string/dots"/>

                        </RadioGroup>

                    </LinearLayout>

                </RelativeLayout>

            </ScrollView>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_alignParentBottom="true">

                <Button android:id="@+id/bAgain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    android:textColor="#000000"
                    android:text="@string/Again"
                    android:background="#FF0004"/>

                <Button android:id="@+id/bGood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:textColor="#000000"
                    android:text="@string/Good"
                    android:background="#03F200"/>

                <Button
                    android:id="@+id/bEasy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:textColor="#000000"
                    android:text="@string/Easy"
                    android:background="#0579F8"/>

            </LinearLayout>

        </RelativeLayout>

    </ViewFlipper>

</LinearLayout>
